<resources>
    <string name="app_name">HearAll</string>

    <string name="facebook_app_id">591844065970928</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">ab2c49edf43f304b4e520c9c52797d90</string>

    <string name="activity_infobull">This is a custom message box</string>
    <string name="activity_infotitle">About Decibel</string>
    <string name="activity_infobutton">Ok</string>
    <string name="activity_recStartErr">Unable to start recording</string>
    <string name="activity_recBusyErr">Recorder is busy or permission to record is prohibited</string>
    <string name="activity_recFileErr">Can not create file</string>
    <!-- activity_main.xml -->
    <string name="activity_minlabel">Minimum</string>
    <string name="activity_avglabel">Average</string>
    <string name="activity_maxlabel">Maximum</string>
    <string name="activity_curlabel">Real Time</string>
    <!-- dialog_info.xml -->
    <string name="info_0db">0dB : Most people just hear a low noise.</string>
    <string name="info_30db">30dB～40dB it\'s the ideal calm.</string>
    <string name="info_50db">50dB and more: affects rest and sleep.</string>
    <string name="info_70db">70dB and more: can affect learning and work.</string>
    <string name="info_90db">90dB and more affect audition.</string>
    <string name="info_150db">150dB : A sudden exposure to a sound environment of 150dB, will break the eardrums. The audition will be completely lost.</string>

    <string name="knowmore">Sign Language Dictionary</string>
    <string name="Alphabets">Alphabets</string>
    <string name="Numbers">Numbers</string>
    <string name="fuw">Frequently used</string>
    <string name="exit_application">Exit Application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="speak">Speak..</string>
    <string name="message_processing">Processing text...please wait</string>
    <string name="message_empty">Enter some text in the search box!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="str_button_add">Add</string>
    <string name="str_button_clear">Clear</string>
    <string name="str_button_back">Back</string>

    <string name="txtvw_word"> </string>
    <string name="home_feature_message">Let\'s start breaking down the communication barriers!</string>

    <string-array name="event_Title">
        <item name="Breaking Barriers: Communication Strategies for the Hearing Impaired">Breaking Barriers</item>
        <item name="Beyond Sound: Living Your Best Life with Hearing Loss">Beyond Sound</item>
        <item name="Hearing Loss 101: Understanding Your Diagnosis and Treatment Options">Hearing Loss 101</item>
        <item name="Navigating the Workplace: Tips and Tools for Professionals with Hearing Loss">Navigating the Workplace</item>
        <item name="Hear Me Out: Advocating for Yourself and Others with Hearing Impairments">Hear Me Out</item>
        <item name="Living with Tinnitus: Coping Strategies and Support">Living with Tinnitus</item>
        <item name="Hearing Aid 101: Everything You Need to Know Before You Buy">Hearing Aid 101</item>
        <item name="Hearing Health and Wellness: Managing Stress and Anxiety with Hearing Loss">Hearing Health and Wellness</item>
    </string-array>

    <string-array name="event_link">
        <item name="SADeaf">https://sadeaf.org.sg/sgsl-course/</item>
        <item name="SADeaf">https://sadeaf.org.sg/sgsl-course/</item>
        <item name="SADeaf">https://sadeaf.org.sg/sgsl-course/</item>
        <item name="SADeaf">https://sadeaf.org.sg/sgsl-course/</item>
        <item name="SADeaf">https://sadeaf.org.sg/sgsl-course/</item>
        <item name="SADeaf">https://sadeaf.org.sg/sgsl-course/</item>
        <item name="SADeaf">https://sadeaf.org.sg/sgsl-course/</item>
        <item name="SADeaf">https://sadeaf.org.sg/sgsl-course/</item>
    </string-array>

    <string-array name="article_link">
        <item name="SADeaf">https://livingwithhearingloss.com/2023/01/31/shouldnt-medical-treatment-be-hearing-loss-friendly/</item>
        <item name="SADeaf">https://livingwithhearingloss.com/2023/02/07/can-meditation-help-with-tinnitus/</item>
        <item name="SADeaf">https://livingwithhearingloss.com/2023/01/24/setting-your-2023-hearing-loss-goals/</item>
        <item name="SADeaf">https://medium.com/an-injustice/deaf-culture-and-deaf-gain-4bf46db4fa0a</item>
        <item name="SADeaf">https://medium.com/publishous/how-a-hearing-loss-taught-me-a-better-way-to-listen-to-god-3097996d2645</item>
        <item name="SADeaf">https://medium.com/microbial-instincts/hearing-loss-an-odd-covid-19-symptom-we-overlooked-6cdf81a5e70</item>
        <item name="SADeaf">https://medium.com/@caroliss88/the-ups-and-downs-of-living-with-hearing-loss-99b40f190533</item>
        <item name="SADeaf">https://medium.com/@karl.utermohlen/4-applications-of-artificial-intelligence-for-hearing-loss-64f3e189847e</item>
    </string-array>

    <string-array name="event_organiser">
        <item name="SADeaf">SADeaf</item>
        <item name="SSD">SSD</item>
        <item name="HCC">HCC</item>
        <item name="H4G">H4G</item>
        <item name="AHLS">AHLS</item>
        <item name="SSI">SSI</item>
        <item name="SAVH">SAVH</item>
        <item name="LB">LB</item>
    </string-array>

    <string-array name="event_organiserDesc">
        <item name="The Singapore Association for the Deaf">Singapore Association for the Deaf</item>
        <item name="Singapore Society for the Deaf">Singapore Society for the Deaf</item>
        <item name="Hearing Care Centre">Hearing Care Centre</item>
        <item name="Hear for Good">Hear for Good</item>
        <item name="Action for Hearing Loss Singapore">Action for Hearing Loss Singapore</item>
        <item name="Social Service Institute">Social Service Institute</item>
        <item name="Singapore Association of the Visually Handicapped">Singapore Association of the Visually Handicapped</item>
        <item name="The Lions Befrienders">UCI Division of Continuing Education Instructor</item>
    </string-array>

    <string-array name="article_title">
        <item name="Shouldn’t Medical Treatment Be Hearing Loss Friendly?">Shouldn’t Medical Treatment Be Hearing Loss Friendly?</item>
        <item name="Can Meditation Help With Tinnitus?">Can Meditation Help With Tinnitus?</item>
        <item name="setting your 2023 hearing loss goals">setting your 2023 hearing loss goals</item>
        <item name="My Hearing Loss Is Also My Gain">My Hearing Loss Is Also My Gain</item>
        <item name="How a hearing loss taught me a better way to listen to God?">How a hearing loss taught me a better way to listen to God?</item>
        <item name="Hearing Loss: An Odd Covid-19 Symptom We Overlooked">Hearing Loss: An Odd Covid-19 Symptom We Overlooked</item>
        <item name="The Ups and Downs of Living With Hearing Loss">The Ups and Downs of Living With Hearing Loss</item>
        <item name="4 Applications of Artificial Intelligence for Hearing Loss">4 Applications of Artificial Intelligence for Hearing Loss</item>
    </string-array>

    <string-array name="tutorial_title">
        <item name="tutorial1">The science of hearing - Douglas L. Oliver</item>
        <item name="tutorial2">A Silent World: A Hearing Impaired Life</item>
        <item name="tutorial3">People With Disabilities Can Succeed Video</item>
        <item name="tutorial4">A Story of Disability and Education</item>
        <item name="tutorial5">Hearing Loss Commercial - The Sounds of Life</item>
        <item name="tutorial6">Tools and techniques for communicating with people with hearing loss</item>
        <item name="tutorial7">Hearing Aids vs Hearing Amplifiers</item>
        <item name="tutorial8">Medical Professionals with Hearing Loss</item>
    </string-array>

</resources>