<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/starting"
    tools:context=".SignLanguage.First_SignLanguage_Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backbutton_sign"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/bacu_ui_btn" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtView_signLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/knowmore"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/fuw"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numbers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/transparent_btn"
        android:backgroundTint="@color/purple_500"
        android:text="@string/fuw"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/numbers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alphabets"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/transparent_btn"
        android:backgroundTint="@color/purple_500"
        android:text="@string/Numbers"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/alphabets"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtView_signLanguage"
        android:layout_centerInParent="true"
        android:layout_marginTop="188dp"
        android:background="@drawable/transparent_btn"
        android:text="@string/Alphabets"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_ai_signLanguage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fuw"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/transparent_btn"
        android:text="AI sign recognition"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/homebutton_sign"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/home_icon" />



</RelativeLayout>